@@ -14,6 +14,7 @@
 * Add lmap#filter. This takes an lmap whose values are elements of the lbool
   lattice and returns an lmap containing only those k/v pairs where the value is
   true.
+* Support deletion rules (<-) with lattice values on the RHS
 * Optimize notin self joins
 
 == 0.9.6 / 2013-02-25
